api-digester: disable objc interop when building on linux. SR-10539